// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<svg
  class="AssetIcon emotion-0"
  data-test-id="cf-ui-asset-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    clip-rule="evenodd"
    d="M.5 0a.5.5 0 00-.5.5v23a.5.5 0 00.5.5h19a.5.5 0 00.5-.5v-17a.5.5 0 00-.146-.354l-6-6A.5.5 0 0013.5 0H.5zM1 23V1h12v5.5a.5.5 0 00.5.5H19v16H1zM18.293 6L14 1.707V6h4.293z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M6 1H5v6h1v1h1v1H6v1h1v1H6v1h1v1H6v1h1v1H6v1h1v1H6v1h1v1h2v-1H8v-1h1v-1H8v-1h1v-1H8v-1h1v-1H8v-1h1v-1H8V9h1V8H8V7h1V1H8v5H6V5h1V4H6V1z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<svg
  class="extra-class-name AssetIcon emotion-0"
  data-test-id="cf-ui-asset-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    clip-rule="evenodd"
    d="M0 .5A.5.5 0 01.5 0h22a.5.5 0 01.5.5v3a.5.5 0 01-.5.5H.5a.5.5 0 01-.5-.5v-3zM1 1v2h21V1H1zM.021 17.5a.5.5 0 01.5-.5h21.958a.5.5 0 010 1H.521a.5.5 0 01-.5-.5z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M2 3.5a.5.5 0 01.5-.5h18a.5.5 0 01.5.5v14a.5.5 0 01-.5.5H12v2.5h-1V18H2.5a.5.5 0 01-.5-.5v-14zM3 4v13h17V4H3z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M11.5 21a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM10.268 7.785a.5.5 0 01.517.032l3.272 2.272a.5.5 0 010 .822l-3.272 2.272a.5.5 0 01-.785-.411V8.228a.5.5 0 01.268-.443zM11 9.184v2.632l1.895-1.316L11 9.184z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M11.5 6a4.5 4.5 0 100 9 4.5 4.5 0 000-9zM6 10.5a5.5 5.5 0 1111 0 5.5 5.5 0 01-11 0z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`renders the component with type pdf 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<svg
  class="extra-class-name AssetIcon emotion-0"
  data-test-id="cf-ui-asset-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    clip-rule="evenodd"
    d="M0 .5A.5.5 0 01.5 0h13a.5.5 0 01.354.146l6 6A.5.5 0 0120 6.5v17a.5.5 0 01-.5.5H.5a.5.5 0 01-.5-.5V.5zM1 1v22h18V7h-5.5a.5.5 0 01-.5-.5V1H1zm13 .707L18.293 6H14V1.707zM4 14.5a.5.5 0 01.5-.5h1.25a1.75 1.75 0 010 3.5H5v1.999a.5.5 0 01-1 0V14.5zm1.75 2a.75.75 0 100-1.5H5v1.5h.75zm2.75-2A.5.5 0 019 14h1c1.527 0 2.5 1.403 2.5 3s-.973 3-2.5 3H9a.5.5 0 01-.5-.5v-5zM10 19c.777 0 1.5-.733 1.5-2s-.723-2-1.5-2h-.5v4h.5zm4.013-5h2.5s.5 0 .5.5-.5.5-.5.5h-2v1h1s.5.013.5.5-.5.5-.5.5h-1v2.5s0 .5-.5.5-.5-.5-.5-.5-.026-4.473-.013-4.987c.013-.513.513-.513.513-.513z"
    fill-rule="evenodd"
  />
</svg>
`;
